@@ -29,6 +29,7 @@ requires:
   Error::Pure::JSON: 0.04
   Error::Pure::NoDie: 0.04
   Error::Pure::Output::JSON: 0.1
+  Error::Pure::Output::Tags::HTMLCustomPage: 0.03
   Error::Pure::Output::Text: 0.22
   perl: 5.6.0
 resources:
